# remembrance-pipelines

./: .gitignore  CLAUDE.md  README.md  consent.yaml  env.example  pyproject.toml  requirements.txt
Journal/: Journal Club Reflections  READING_INDEX.md  Wk1  Wk2  Wk3
data/: consent.schema.yaml  consent_template.yaml
docs/: ipad-mac-setup.md
forms/oral-history-intake/: App.jsx  index.html  package-lock.json  package.json  vercel.json
forms/oral-history-intake/src/: main.jsx
pipeline/: __init__.py  consent_check.py  consent_gate.py  diarize.py  sync_consent.py  tag.py  transcribe.py
tests/: test_consent_check.py  test_consent_gate.py
worker/: airtable-proxy.js
